Updated slider guicontrol, removed hardcoded values, labels, width, etc. Updated formz css for sliders. Fixed label text align on sliders.

--- a/formz/public/css/formz.css
+++ b/formz/public/css/formz.css
@@ -33,6 +33,11 @@
 	color: #888;
 }
 
+/* special override for slider guicontrols */
+.formz-slider-wrapper .form-item-content {
+	padding-top: 1em;
+	margin-bottom: 1.5em;
+}
 
 /* style sortable formz */
 .formz-list.sortable table thead th {
